--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,5 @@
 # This file lists all contributors to the repository.
 # See hack/generate-authors.sh to make modifications.
 
+Florian Meignan <146742704+FlorianM-C22@users.noreply.github.com>
 jmitchell35 <julian.m.mitchell@gmail.com>
